# pbirb-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pbirb_mcp_server.py  pyproject.toml  server.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  tool_proposal.yml
.github/workflows/: ci.yml  release.yml
docs/: MATRIX-cookbook.md  PBIDATASET-cookbook.md  ROADMAP.md  TRANSACTIONS.md
pbirb_mcp/: __init__.py  server.py  tools.py
pbirb_mcp/core/: document.py  encoding.py  ids.py  schema.py  transactions.py  xpath.py
pbirb_mcp/ops/: actions.py  body.py  chart.py  clone.py  dataset.py  datasource.py  dry_run.py  embedded_images.py  escape.py  expressions.py  filter_types.py  header_footer.py  images.py  layout.py  lint.py  page.py  parameters.py  positioning.py  reader.py  scratch.py  snapshot.py  styling.py  tablix.py  tablix_cells.py  tablix_columns.py  tablix_static.py  tablix_subtotals.py  templates.py  transactions.py  validate.py  visibility.py
pbirb_mcp/schemas/: NOTICE.md  reportdefinition.xsd
tests/: test_actions.py  test_alternating.py  test_auto_verify.py  test_body.py  test_chart.py  test_clone.py  test_dataset.py  test_datasource.py  test_document.py  test_dry_run.py  test_embedded_images.py  test_encoding_idempotent.py  test_escape.py  test_expressions.py  test_filter_types.py  test_header_footer.py  test_ids.py  test_images.py  test_layout.py  test_lint.py  test_page.py  test_parameter_layout.py  test_parameters_advanced.py  test_parameters_crud.py  test_parameters_values.py  test_positioning.py  test_reader.py  test_reader_charts.py  test_reader_v02.py  test_reorder_parameters.py  test_schema_bundled.py  test_scratch.py  test_server_protocol.py  test_snapshot.py  test_style_tablix_row.py  test_styling.py  test_tablix_cells.py  test_tablix_columns.py  test_tablix_columns_addremove.py  test_tablix_filters.py  (+10 more)
tests/fixtures/: pbi_chart_rich.rdl  pbi_multi_datasource.rdl  pbi_paginated_minimal.rdl
tests/fixtures/known_bad/: actioninfo_under_chartseries.rdl  bare_action_under_textbox.rdl  chart_axis_title_wrong_element.rdl
